--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,6 +18,24 @@
 
   --ifm-color-banner-background: white;
   --ifm-color-banner-font-color: black;
+
+
+  --ifm-get-color: #66dd9a;
+  --ifm-get-color-background: #66dd9a9a;
+  --ifm-post-color: #ffe47e;
+  --ifm-post-color-background: #ffe47e9a;
+  --ifm-delete-color: #e99a8e;
+  --ifm-delete-color-background: #e99a8e9a;
+  --ifm-put-color: #66aef6;
+  --ifm-put-color-background: #66aef69a;
+  --ifm-path-color: #bca4dc;
+  --ifm-path-color-background: #bca4dc9a;
+  --ifm-head-color: #69d797;
+  --ifm-head-color-background: #69d7979a;
+  --ifm-event-color: #c77253;
+  --ifm-event-color-background: #c772539a;
+  --ifm-schema-color: #a4a6a8;
+  --ifm-schema-color-background: #a4a6a89a;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -33,4 +51,110 @@
 
   --ifm-color-banner-background: #1b1b1d;
   --ifm-color-banner-font-color: white;
+}
+
+
+
+/* Sidebar Method labels */
+.api-method > .menu__link,
+.schema > .menu__link {
+  align-items: center;
+  justify-content: start;
+}
+
+.api-method > .menu__link::before,
+.schema > .menu__link::before {
+  width: 55px;
+  height: 20px;
+  font-size: 12px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-radius: 0.25rem;
+  border: 1px solid;
+  border-inline-start-width: 5px;
+  margin-right: var(--ifm-spacing-horizontal);
+  text-align: center;
+  flex-shrink: 0;
+}
+
+.get > .menu__link::before {
+  content: "get";
+  background-color: var(--ifm-get-color-background);
+  color: var(--ifm-color-info-contrast-foreground);
+  border-color: var(--ifm-get-color);
+}
+
+.badge--primary {
+  background-color: var(--ifm-get-color-background) !important;
+  border-color: var(--ifm-get-color) !important;
+}
+
+.post > .menu__link::before {
+  content: "post";
+  background-color: var(--ifm-post-color-background);
+  color: var(--ifm-color-success-contrast-foreground);
+  border-color: var(--ifm-post-color);
+}
+
+.badge--success {
+  background-color: var(--ifm-post-color-background) !important;
+  border-color: var(--ifm-post-color) !important;
+}
+
+.delete > .menu__link::before {
+  content: "del";
+  background-color: var(--ifm-delete-color-background);
+  color: var(--ifm-color-danger-contrast-foreground);
+  border-color: var(--ifm-delete-color);
+}
+
+.badge--danger {
+  background-color: var(--ifm-delete-color-background) !important;
+  border-color: var(--ifm-delete-color) !important;
+}
+
+.put > .menu__link::before {
+  content: "put";
+  background-color: var(--ifm-put-color-background);
+  color: var(--ifm-color-warning-contrast-foreground);
+  border-color: var(--ifm-put-color);
+}
+
+.badge--info {
+  background-color: var(--ifm-put-color-background) !important;
+  border-color: var(--ifm-put-color) !important;
+}
+
+.patch > .menu__link::before {
+  content: "patch";
+  background-color: var(--ifm-path-color-background);
+  color: var(--ifm-color-success-contrast-foreground);
+  border-color: var(--ifm-path-color);
+}
+
+.badge--warning {
+  background-color: var(--ifm-path-color-background) !important;
+  border-color: var(--ifm-path-color) !important;
+}
+
+.head > .menu__link::before {
+  content: "head";
+  background-color: var(--ifm-head-color-background);
+  color: var(--ifm-color-secondary-contrast-foreground);
+  border-color: var(--ifm-head-color);
+}
+
+.event > .menu__link::before {
+  content: "event";
+  background-color: var(--ifm-event-color-background);
+  color: var(--ifm-color-secondary-contrast-foreground);
+  border-color: var(--ifm-event-color);
+}
+
+.schema > .menu__link::before {
+  content: "schema";
+  background-color: var(--ifm-schema-color-background);
+  color: var(--ifm-color-secondary-contrast-foreground);
+  border-color: var(--ifm-schema-color);
 }
